# Topside

./: .gitignore  BITMASK_COMMUNICATION.md  README.md  STATUS.md  app.py  callbacks.py  demo_bitmask.py  frontend33.py  frontend_dual_window.py  pyproject.toml  requirements.txt  routes.py  run.ps1  run.sh  temporary.py  test.py  topside-server.py  utils.py  video_window.py
GUI/: sensor.py  video.py
autonomus/: aruco_logger.py  image_proccesing.py
backup-usb-camera-ethernet/: camera.py  cameratest.py  camreceiver.py
components/: battery.py  depth.py  lights.py  sensors.py  thrusters.py  video.py
data/: FORKLARING datajson.md  config.json  controls.json  data.json  data_forslag.json  pid_configs.json
debug_server/: README.md  data.json  server.py
docs/: SETUP.md  swagger.yml
installer/: Topside.iss
joystick/: read_joy.py
lib/: __init__.py  aruco_logger.py  axis_config_sender.py  bitmask.py  bitmask_converter.py  camera.py  comms.py  control_telemetry.py  controller.py  controller_elite2.py  crc.py  depth_receiver.py  eventlogger.py  frame_control_client.py  json_data_handler.py  log_udp_receiver.py  net_transport.py  ninedof_receiver.py  pid_config_client.py  ps4Kontroller.py  resource_receiver.py  runtime_paths.py  sensor_handling.py  setpoint_override.py  system_control_client.py  utils.py  video_stream.py
logs/: log_2025-01-12_19-13-49.txt  log_2025-01-12_19-13-50.txt
rpi_mock_server/: rpi_mock_server.py  test.py
tests/: test_aruco_logger.py  test_aruco_routes.py  test_bitmask_converter.py  test_camera.py  test_camera_cleanup.py  test_comms.py  (+7 more)
(+56 files in other folders)
