[project]
name = "topside"
version = "0.1.0"
description = "Topside dashboard for telemetry, controls, and camera streams."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.0.3,<4",
    "numpy>=2.1.3,<3",
    "opencv-contrib-python>=4.12.0.88,<5",
    "pygame>=2.5,<3",
    "requests>=2.33.0,<3",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2,<10",
]
build = [
    "pyinstaller>=6.11,<7",
]
lint = [
    "ruff>=0.14,<1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]

[tool.uv]
package = false
